test/asm/macro-arg-in-string.err
ERROR: macro-arg-in-string.asm(12):
    Illegal character escape '!'
error: Assembly aborted (1 errors)!
